# vector-exchange

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  webpack.config.js
.github/workflows/: rust.yml
src/: main.rs  widgets.rs
src/bridge/: index.ts  monaco.ts  monarch.ts
src/bridge/styles/: input.css
src/js/: monaco.js
src/widgets/: program_view.rs  registers_view.rs  top_bar.rs
src/widgets/program_view/: editor.rs  examples_repo.rs  top_bar.rs
src/widgets/registers_view/: csr_view.rs  float_registers.rs  integer_registers.rs  memory_view.rs  registers_header.rs  scalar_register.rs  scalar_view.rs  vector_view.rs
src/widgets/registers_view/scalar_view/: float_registers.rs  integer_registers.rs  pc_register.rs  scalar_register.rs
src/widgets/registers_view/vector_view/: vector_config.rs  vector_registers.rs
