[package]
name = "vector-exchange"
version = "0.0.11-hotfix.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
leptos = { version = "0.4.10", features = ["csr", "nightly"] }
eeric = "0.0.40"
eeric-interpreter = "0.0.39"
wasm-bindgen = "0.2.87"
