[package]
name = "vector-exchange"
version = "0.0.23"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
leptos = { version = "0.4.10", features = ["csr", "nightly"] }
eeric = "0.1.0-rc.2"
eeric-interpreter = "0.0.56"
wasm-bindgen = "0.2.87"
